<resources>
    <string name="app_name">GroceryPool</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="title">Grocery Pool</string>
    <string name="button1">Rider</string>
    <string name="button2">Driver</string>
    <string name="title_activity_rider_login">rider_login</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="Calendar">Calendar</string>
    <string name="Messages">Messages</string>
    <string name="Profile">Profile</string>
    <string name="save_changes">save changes</string>
    <string name="image1">image1</string>
    <string name="delete_account">delete account</string>
    <string name="confirm_password">confirm password</string>
    <string name="Email">email</string>
    <string name="new_or_old_password">New or Old Password</string>
    <string name="image">image</string>
    <string name="johncena_youcantcme_stfu">Johncena@YouCantCMe.stfu</string>
    <string name="email2">email2</string>
    <string name="sendimage">sendimage</string>
    <string name="email">email2</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>